// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControl renders StringControl unchanged 1`] = `
<div>
  <div
    class="sc-c78f65af-0 fNBDPU"
  >
    <div
      class="sc-460918ac-0 bCOVth"
    >
      <input
        class="hasData"
        type="text"
        value="derp"
      />
      <label
        class="sc-f769c06f-0 kZoseS"
      >
        String test
      </label>
    </div>
    <div
      class="sc-955ed11e-0 griBRj"
    />
  </div>
</div>
`;

exports[`StringControl renders StringControl:Phone unchanged 1`] = `
<div>
  <div
    class="sc-c78f65af-0 iWZHXx"
  >
    <div
      class="sc-460918ac-0 bCOVth"
    >
      <input
        class="noData"
        type="text"
        value=""
      />
      <label
        class="sc-f769c06f-0 kZoseS"
      >
        String test
      </label>
    </div>
    <div
      class="sc-955ed11e-0 griBRj"
    />
  </div>
</div>
`;
